<resources>
    <string name="app_name">Monocle Wines</string>

    <!-- Text for empty list view -->
    <string name="empty_view_text">There are no wines to display!</string>
    <string name="empty_title_instruction_text">Click \'+\' to add a wine.</string>

    <!-- title for text editor when creating a new wine -->
    <string name="new_wine_editor_title">Add a Wine</string>

    <!-- title for text editor when editing an existing wine -->
    <string name="existing_wine_editor_title">Edit Wine</string>

    <!-- text for menu items -->
    <string name="action_save_wine">Save</string>
    <string name="action_delete_wine">Delete</string>

    <!-- Text for editor labels -->
    <string name="description_editor_label">Wine Details</string>
    <string name="name_hint">Wine Name</string>
    <string name="grape_hint">Grape Name(s)</string>
    <string name="wine_colour_label">Wine Colour</string>
    <string name="quantity_editor_label">Stock Details</string>
    <string name="quantity_label">Quantity Available</string>
    <string name="currency_label">£</string>

    <!-- Button text -->
    <string name="order_button">Order More</string>

    <!-- unknown grape placebolder text -->
    <string name="unknown_grape">Grape Unknown</string>

    <!-- Text for spinner options -->
    <string name="colour_unknown">Unknown</string>
    <string name="colour_red">Red</string>
    <string name="colour_white">White</string>
    <string name="colour_rose">Rose</string>

    <!-- Toast message for successfully editing wine and database is updated -->
    <string name="wine_edit_successful">Wine Saved</string>

    <!-- Toast message for error in editing wine and database is not updated -->
    <string name="wine_edit_unsuccessful">Wine not saved. Please ensure you enter all required details.</string>

    <!-- Toast message for successfully deleting wine and database is updated -->
    <string name="wine_delete_successful">Wine Deleted</string>

    <!-- Toast message for error deleting wine and database is not updated -->
    <string name="wine_delete_unsuccessful">Wine not deleted. Please try again.</string>

    <!-- Message when user is leaving editor but hasn't saved changes -->
    <string name="unsaved_changes_dialog_msg">Your changes haven\'t been saved. Are you sure you want to quit?</string>

    <!-- Button text for option to discard user's changes -->
    <string name="discard_changes">Quit</string>

    <!-- Button text for the option to cancel, and return to editor-->
    <string name="keep_editing">Keep Editing</string>

    <!-- Warning message when deleting an item -->
    <string name="delete_warning_message">Are you sure you want to delete this wine? This can\'t be undone.</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Display text for 'in stock' -->
    <string name="in_stock_text">750ml bottles in stock</string>

    <!-- Toast messages for wine sale -->
    <string name="wine_sale_successful">Bottle sold</string>
    <string name="wine_sale_unsuccessful">No more bottles to sell!</string>

    <!-- text for contacting supplier -->
    <string name="stock_low">stock running low. Please deliver additional crates.</string>
    <string name="quantity_remaining">Number of bottles remaining:</string>


</resources>
